# LAN-Messanger

./: README.md  package-lock.json  package.json
.github/workflows/: build-windows.yml
src/: App.css  App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: lib.rs  network.rs
